--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,50 +4,31 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:maxHeight="@android:dimen/dialog_min_width_minor"
-    android:minHeight="@android:dimen/dialog_min_width_minor"
     tools:context=".MainActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
-
-        <EditText
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:inputType="textPersonName"
-            android:hint="Filtro"
-            android:ems="10"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:id="@+id/text_filtro"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true" />
+        android:orientation="vertical"
+        app:layout_constraintDimensionRatio="w,1:1">
 
         <Button
-            android:text="Buscar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/text_filtro"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
             android:id="@+id/boton_buscar"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true"
-            android:onClick="buscarPosts" />
-
-        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/boton_buscar"
+            android:layout_alignParentEnd="true"
             android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:id="@+id/lista_posts"
-            android:layout_alignParentBottom="true"
             android:layout_alignParentRight="true"
-            android:scrollbars="vertical"
-            android:layout_alignParentEnd="true" />
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/text_filtro"
+            android:onClick="buscarPosts"
+            android:text="Buscar" />
+
+        <ListView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/lista_posts" />
+
     </LinearLayout>
+
 </android.support.constraint.ConstraintLayout>
